# django-faktory-outbox

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
examples/: docker-compose.yml  run_example.py
examples/django_example/: batch_demo.py  demo.py  stress_test.py
examples/django_example/demo_app/: __init__.py  apps.py  models.py
examples/django_example/demo_app/migrations/: 0001_initial.py  __init__.py
examples/django_example/project/: __init__.py  settings.py
faktory_outbox/: __init__.py  apps.py  dialects.py  engine.py  main.py  models.py  relay.py  service.py
faktory_outbox/management/commands/: clear_processed_outbox.py
faktory_outbox/migrations/: 0001_initial.py  __init__.py
tests/: __init__.py  conftest.py  test_dialects.py  test_engine.py  test_pruning.py  test_relay_cli.py  test_relay_units.py  test_service.py  test_services.py
utils/: clean_cached_files.py  make_migrations.py
