[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-faktory-outbox"
version = "0.1.0"
description = "Transactional outbox for Django and Faktory with exponential backoff."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "addonol", email = "addonol.github@gmail.com"}]
license = { text = "MIT" }
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "faktory",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.11"]
oracle = ["oracledb>=3.4.2"]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[project.scripts]
clean-outbox = "scripts.cleanup:cleanup"

[project.urls]
Homepage = "https://github.com/addonol/django-faktory-outbox"
Repository = "https://github.com/addonol/django-faktory-outbox.git"
Issues = "https://github.com/addonol/django-faktory-outbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["faktory_outbox"]

[tool.hatch.build.targets.sdist]
include = ["faktory_outbox"]

[tool.ruff]
target-version = "py311"
line-length = 90
lint.select = ["E", "F", "I", "D"]
lint.pydocstyle.convention = "google"

[tool.uv.sources]
faktory = { git = "https://github.com/addonol/faktory_worker_python", rev = "e5077889405d7202e6232edaf16b9cb0974db1a2" }


[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
