[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-faktory-outbox"
version = "0.1.0"
description = "Transactional outbox for Django and Faktory with exponential backoff."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "addonol", email = "addonol.github@gmail.com"}]
license = { text = "MIT" }
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=5.2",
    "faktory",
]

# Fix: Standard optional dependencies (Extras) required for production container builds
[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.11",
]
oracle = [
    "oracledb>=3.4.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pre-commit>=4.6.0",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "ruff",
    "pytest-mock>=3.15.1",
]

[project.urls]
Homepage = "https://github.com/addonol/django-faktory-outbox"
Repository = "https://github.com/addonol/django-faktory-outbox"
Issues = "https://github.com/addonol/django-faktory-outbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["faktory_outbox"]

[tool.hatch.build.targets.sdist]
include = ["faktory_outbox"]

[tool.ruff]
target-version = "py311"
line-length = 90
lint.select = ["E", "F", "I", "D"]
lint.pydocstyle.convention = "google"

[tool.uv.sources]
faktory = { git = "https://github.com/addonol/faktory_worker_python", rev = "e5077889405d7202e6232edaf16b9cb0974db1a2" }

[tool.pytest.ini_options]
addopts = "--cov=faktory_outbox --cov-report=term-missing"

[tool.coverage.run]
source = ["faktory_outbox"]
relative_files = true

[tool.bandit]
exclude_dirs = ["tests"]
